Prevent markdown 'code' lines from overflowing

--- a/css/talk.styl
+++ b/css/talk.styl
@@ -389,8 +389,13 @@ COPY_GREY_LIGHT = #afaeae
     .markdown
       > blockquote
         opacity: 0.5
+
+      > pre
+        white-space: pre-line
+
       img
         max-width: 100%
+
     .subject-container
       max-width: 100%
       img
@@ -449,6 +454,7 @@ COPY_GREY_LIGHT = #afaeae
     width: 80%
     float: left
     position: relative
+    overflow: auto
 
     .talk-comment-date
       margin: 0
